fix: remove x-overflow from slider

--- a/src/styles/instructors.css
+++ b/src/styles/instructors.css
@@ -26,7 +26,6 @@
   position: relative;
   justify-content: center;
   overflow: hidden;
-  width: 100vw;
 }
 
 .instructors__slider--next,
